fixed alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@ canvas {
 }
 
 body { 
-  margin: 0; 
+  margin: 0;
+  overflow: hidden; 
 }
 
 canvas { 
